--- a/styles.css
+++ b/styles.css
@@ -66,3 +66,101 @@ h6 {
 #__next {
   isolation: isolate;
 }
+
+html {
+  font-family: Arial, sans-serif;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+
+#bookshelf {
+  display: grid;
+  width: 90%;
+  border: 1px solid black;
+}
+
+#bookshelf-body {
+  display: grid;
+}
+
+#bookshelf-head tr,
+#bookshelf-body tr {
+  display: grid;
+  grid-template-columns: 3fr 3fr 1fr 1fr 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+}
+
+#bookshelf-head tr {
+  background-color: rgb(135, 206, 235);
+}
+
+#bookshelf-body tr:nth-child(even) {
+  background-color: rgb(224, 224, 224);
+}
+
+#bookshelf-body tr:hover {
+  background-color: #ffe4b3;
+}
+
+.read-button {
+  width: 5rem;
+}
+
+dialog {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+input:invalid {
+  outline: 1px solid red;
+}
+
+h2,
+p {
+  text-align: center;
+  font-weight: bold;
+}
+
+dialog form {
+  display: grid;
+  gap: 1rem;
+}
+
+dialog form div {
+  display: grid;
+  grid-template-columns: 5rem 1fr;
+  font-weight: bold;
+}
+
+dialog form div:nth-child(6) input {
+  width: 1.5rem;
+  height: 1.5rem;
+  outline: 1px solid black;
+}
+
+#submit-book-button,
+#close-button-container {
+  display: flex;
+  justify-content: center;
+}
+
+#add-book-button,
+#close-form-button {
+  font-weight: bold;
+}
+
+#close-form-button {
+  margin-top: 1rem;
+}
